--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2649,3 +2649,91 @@ ul {
 	text-align: center;
 	list-style-position: inside;
 }
+
+
+.dropbtn {
+  background-color: #183026;
+	background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+	background-repeat: repeat, no-repeat;
+	background-size: auto, cover;
+	background-position: top left, center 0;
+	background-attachment: fixed, fixed;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 18pt;
+	line-height: 1.75em;
+	font-weight: 300;
+	letter-spacing: 1px;
+	color: black;
+	text-shadow: 0 0 0.5px rgba(58, 57, 57, 0.25);
+	-webkit-text-stroke: 0.25px;
+}
+
+.dropdown {
+  position: relative;
+	display: inline-block;
+	background-color: #183026;
+	background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+	background-repeat: repeat, no-repeat;
+	background-size: auto, cover;
+	background-position: top left, center 0;
+	background-attachment: fixed, fixed;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 18pt;
+	line-height: 1.75em;
+	font-weight: 300;
+	letter-spacing: 1px;
+	color: black;
+	text-shadow: 0 0 0.5px rgba(58, 57, 57, 0.25);
+	-webkit-text-stroke: 0.25px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+	background-color: #183026;
+	background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+	background-repeat: repeat, no-repeat;
+	background-size: auto, cover;
+	background-position: top left, center 0;
+	background-attachment: fixed, fixed;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 18pt;
+	line-height: 1.75em;
+	font-weight: 300;
+	letter-spacing: 1px;
+	color: black;
+	text-shadow: 0 0 0.5px rgba(58, 57, 57, 0.25);
+	-webkit-text-stroke: 0.25px;
+}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {
+	background-color: #183026;
+	background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+	background-repeat: repeat, no-repeat;
+	background-size: auto, cover;
+	background-position: top left, center 0;
+	background-attachment: fixed, fixed;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 18pt;
+	line-height: 1.75em;
+	font-weight: 300;
+	letter-spacing: 1px;
+	color: black;
+	text-shadow: 0 0 0.5px rgba(58, 57, 57, 0.25);
+	-webkit-text-stroke: 0.25px;
+}
